--- a/frontend-vue/index.html
+++ b/frontend-vue/index.html
@@ -53,7 +53,7 @@
         <h2 style="margin: 6px 0 8px;">{{ fr.filename }}</h2>
         <div class="file-body">
           <div v-for="page in fr.pages" :key="page.pageIndex" class="page-card">
-            <page-canvas :page="page" @edited="updateDiff(fr)" />
+            <page-canvas :page="page" :highlight-map="compareResult ? compareHighlights[fr.fileId] : null" @edited="updateDiff(fr)" />
           </div>
 
           <div style="margin-top: 10px;">
@@ -443,7 +443,7 @@
         </div>
         <div class="file-body">
           <div v-for="page in historySelected.pages" :key="page.pageIndex" class="page-card">
-            <page-canvas :page="page" @edited="updateDiff(historySelected)" />
+            <page-canvas :page="page" :highlight-map="historyCompare ? compareHighlights[historySelected.fileId] : null" @edited="updateDiff(historySelected)" />
           </div>
 
           <div style="margin-top: 10px;">
